force-app/main/default/objects/Opportunity/fields/CANAL__c.field-meta.xml
<CustomField>
    <fullName>CANAL__c</fullName>
    <formula>Meta__r.Canal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canal</label>
    <type>Text</type>
</CustomField>