force-app/main/default/objects/Opportunity/fields/CanalEntrada__c.field-meta.xml
<CustomField>
    <fullName>CanalEntrada__c</fullName>
    <label>Canal de Entrada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atendimento Loja</fullName>
            </value>
            <value>
                <fullName>Ativo - AeC</fullName>
            </value>
            <value>
                <fullName>Blended - AeC</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
            <value>
                <fullName>Promotor</fullName>
            </value>
            <value>
                <fullName>Prospecção</fullName>
            </value>
            <value>
                <fullName>Receptivo - AeC</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Indicação interna UnimedBH</fullName>
            </value>
            <value>
                <fullName>e-Commerce</fullName>
            </value>
            <value>
                <fullName>Hotsite: Soluções Empresa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>