force-app/main/default/objects/Opportunity/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <externalId>true</externalId>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>