force-app/main/default/objects/Opportunity/fields/CompetenciaPrimeiraParcela__c.field-meta.xml
<CustomField>
    <fullName>CompetenciaPrimeiraParcela__c</fullName>
    <label>Competência primeira parcela</label>
    <type>Date</type>
</CustomField>