force-app/main/default/objects/Opportunity/fields/Coordenadas__c.field-meta.xml
<CustomField>
    <fullName>Coordenadas__c</fullName>
    <label>Coordenadas</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>