force-app/main/default/objects/Opportunity/fields/Coordenador__c.field-meta.xml
<CustomField>
    <fullName>Coordenador__c</fullName>
    <formula>Meta__r.Coordenacao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordenador</label>
    <type>Text</type>
</CustomField>