force-app/main/default/objects/Opportunity/fields/DataExclusao__c.field-meta.xml
<CustomField>
    <fullName>DataExclusao__c</fullName>
    <description>Campo para inserção das fotografias dos Corretores Unimed</description>
    <label>Data de exclusão</label>
    <type>Date</type>
</CustomField>