force-app/main/default/objects/Opportunity/fields/DataUltimaAta__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaAta__c</fullName>
    <label>Data da Última Ata</label>
    <type>Date</type>
</CustomField>