force-app/main/default/objects/Opportunity/fields/DataVenda__c.field-meta.xml
<CustomField>
    <fullName>DataVenda__c</fullName>
    <description>Campo para inserção das fotografias dos Corretores Unimed</description>
    <label>Data da venda</label>
    <type>Date</type>
</CustomField>