force-app/main/default/objects/Opportunity/fields/DataVigenciaContrato__c.field-meta.xml
<CustomField>
    <fullName>DataVigenciaContrato__c</fullName>
    <label>Data de vigência do contrato</label>
    <type>Date</type>
</CustomField>