force-app/main/default/objects/Opportunity/fields/DataVigenciaProgramada__c.field-meta.xml
<CustomField>
    <fullName>DataVigenciaProgramada__c</fullName>
    <label>Data de vigência programada</label>
    <type>Date</type>
</CustomField>