force-app/main/default/objects/Opportunity/fields/DocId__c.field-meta.xml
<CustomField>
    <fullName>DocId__c</fullName>
    <description>Armazena o CPF (Plano Individual) ou CNPJ (Plano Empresarial) da Oportunidade</description>
    <externalId>true</externalId>
    <label>Documento Identificado da Integração</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>