force-app/main/default/objects/Opportunity/fields/Gerente__c.field-meta.xml
<CustomField>
    <fullName>Gerente__c</fullName>
    <formula>&quot;LEONARDO COSTA MARTINS TORRES&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerente</label>
    <type>Text</type>
</CustomField>