force-app/main/default/objects/Opportunity/fields/HouveAgendamento__c.field-meta.xml
<CustomField>
    <fullName>HouveAgendamento__c</fullName>
    <label>Houve agendamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>