force-app/main/default/objects/Opportunity/fields/IDCoordenador__c.field-meta.xml
<CustomField>
    <fullName>IDCoordenador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id do Coordenador</description>
    <label>ID do Coordenador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>