force-app/main/default/objects/Opportunity/fields/IdGerente__c.field-meta.xml
<CustomField>
    <fullName>IdGerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Registra o Id do Gerente</description>
    <label>Id do Gerente</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>