force-app/main/default/objects/Opportunity/fields/IDMetaCoordenador__c.field-meta.xml
<CustomField>
    <fullName>IDMetaCoordenador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Busca a informação da meta do coordenador no objeto meta__c, a meta é compatível com o canal e com a competência. Esta meta não é a desafio.</description>
    <label>ID da Meta do Coordenador</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Oportunidades (Meta Coordenador)</relationshipLabel>
    <relationshipName>Oportunidades2</relationshipName>
    <type>Lookup</type>
</CustomField>