force-app/main/default/objects/Opportunity/fields/IDMetaCoordenadorDesafio__c.field-meta.xml
<CustomField>
    <fullName>IDMetaCoordenadorDesafio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Busca a informação da meta desafio do coordenador no objeto meta__c, a meta é compatível com o canal e com a competência.</description>
    <label>Id da Meta Desafio do Coordenador</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Oportunidades (Id da Meta Desafio do Coordenador)</relationshipLabel>
    <relationshipName>Oportunidades4</relationshipName>
    <type>Lookup</type>
</CustomField>