force-app/main/default/objects/Opportunity/fields/IDMetaGerente__c.field-meta.xml
<CustomField>
    <fullName>IDMetaGerente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Busca a informação da meta do gerente no objeto meta__c, a meta é compatível com a competência. Esta meta não é a desafio.</description>
    <label>ID da Meta do Gerente</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Oportunidades (Meta do gerente)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>