force-app/main/default/objects/Opportunity/fields/IDMetaGerenteDesafio__c.field-meta.xml
<CustomField>
    <fullName>IDMetaGerenteDesafio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Busca a informação da meta desafio do gerente no objeto meta__c, a meta é compatível com o canal e com a competência.</description>
    <label>Id da Meta Desafio do Gerente</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Oportunidades (Id da Meta Desafio do Gerente)</relationshipLabel>
    <relationshipName>Oportunidades6</relationshipName>
    <type>Lookup</type>
</CustomField>