force-app/main/default/objects/Opportunity/fields/IdMetaLoja__c.field-meta.xml
<CustomField>
    <fullName>IdMetaLoja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Meta Loja</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Oportunidades (Id Meta Loja)</relationshipLabel>
    <relationshipName>Oportunidades5</relationshipName>
    <type>Lookup</type>
</CustomField>