force-app/main/default/objects/Opportunity/fields/IDMetaSupervisor__c.field-meta.xml
<CustomField>
    <fullName>IDMetaSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Busca a informação da meta do supervisor no objeto meta__c, a meta é compatível com o canal e com a competência.</description>
    <label>ID da Meta do Supervisor</label>
    <referenceTo>Meta__c</referenceTo>
    <relationshipLabel>Oportunidades (ID da Meta do Supervisor)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>