force-app/main/default/objects/Opportunity/fields/IDSupervisor__c.field-meta.xml
<CustomField>
    <fullName>IDSupervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID do Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>