force-app/main/default/objects/Opportunity/fields/LOJA__c.field-meta.xml
<CustomField>
    <fullName>LOJA__c</fullName>
    <formula>Meta__r.Loja__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOJA</label>
    <type>Text</type>
</CustomField>