force-app/main/default/objects/Opportunity/fields/META_ASSISTENCIAL_GVEN__c.field-meta.xml
<CustomField>
    <fullName>META_ASSISTENCIAL_GVEN__c</fullName>
    <formula>CASE(1,

IF(

 Gerente__c   =    (IDMetaGerente__r.Usuario__r.FirstName + &apos; &apos; + IDMetaGerente__r.Usuario__r.LastName)    &amp;&amp;     TEXT(MONTH( Account.DataVigencia__c ))   =  TEXT(  IDMetaGerente__r.Competencia__c  )  
&amp;&amp;   
TEXT(YEAR(  Account.DataVigencia__c  )) = TEXT( IDMetaGerente__r.Ano__c )

,1,0), TEXT( IDMetaGerente__r.Assistencial__c ),

&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>META ASSISTENCIAL GVEN</label>
    <type>Text</type>
</CustomField>