force-app/main/default/objects/Opportunity/fields/MotivoExclusaoCliente__c.field-meta.xml
<CustomField>
    <fullName>MotivoExclusaoCliente__c</fullName>
    <label>Motivo exclusão cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>