force-app/main/default/objects/Opportunity/fields/MotivoNaoAgendamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoNaoAgendamento__c</fullName>
    <label>Motivo do Não Agendamento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HouveAgendamento__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Achou alto o valor do plano</fullName>
            </value>
            <value>
                <fullName>Ficou de pensar na proposta</fullName>
            </value>
            <value>
                <fullName>Sem contingente mínimo</fullName>
            </value>
            <value>
                <fullName>Cliente optou por ir à loja</fullName>
            </value>
            <value>
                <fullName>Vai pensar/avaliar</fullName>
            </value>
            <value>
                <fullName>Outras opções dentro do 4020-4020 ou Unidesk</fullName>
            </value>
            <value>
                <fullName>Informações da ativação da contratação</fullName>
            </value>
            <value>
                <fullName>Cadastro de benefício RN</fullName>
            </value>
            <value>
                <fullName>Cancelamento/Reagendamento de visita ou confirmação</fullName>
            </value>
            <value>
                <fullName>CNPJ cadastrado a menos de 6 meses</fullName>
            </value>
            <value>
                <fullName>Cliente inadimplente</fullName>
            </value>
            <value>
                <fullName>Fora da área de abrangência</fullName>
            </value>
            <value>
                <fullName>Deseja plano com abrangência nacional</fullName>
            </value>
            <value>
                <fullName>Não possui documentação obrigatória</fullName>
            </value>
            <value>
                <fullName>RN acima de 28 dias</fullName>
            </value>
            <value>
                <fullName>Queda/ligação muda</fullName>
            </value>
            <value>
                <fullName>Área de risco</fullName>
            </value>
            <value>
                <fullName>Informação para Terceiros</fullName>
            </value>
            <value>
                <fullName>Encaminhado para célula de vendas</fullName>
            </value>
            <value>
                <fullName>Troca de plano</fullName>
            </value>
            <value>
                <fullName>Dúvidas (Acomodação, opcionais, adaptação, troca de plano, ex-funcionário)</fullName>
                <label>Já é cliente, Dúvidas (Acomodação, opcionais, adaptação, ex-funcionário)</label>
            </value>
            <value>
                <fullName>Já é cliente, Dúvidas (Acomodação, opcionais, adaptação, ex-funcionário)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>