force-app/main/default/objects/Opportunity/fields/NomeCoordenador__c.field-meta.xml
<CustomField>
    <fullName>NomeCoordenador__c</fullName>
    <formula>Meta__r.IDCoordenador__r.FirstName&amp;&quot; &quot;&amp;Meta__r.IDCoordenador__r.LastName</formula>
    <label>Nome do Coordenador</label>
    <type>Text</type>
</CustomField>