force-app/main/default/objects/Opportunity/fields/NomeGrupoContrato__c.field-meta.xml
<CustomField>
    <fullName>NomeGrupoContrato__c</fullName>
    <label>Nome grupo contrato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>