force-app/main/default/objects/Opportunity/fields/NomeVendedor__c.field-meta.xml
<CustomField>
    <fullName>NomeVendedor__c</fullName>
    <description>Informação advinda do SGC: Nome do vendedor.</description>
    <label>Nome do Vendedor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>