force-app/main/default/objects/Opportunity/fields/Porte__c.field-meta.xml
<CustomField>
    <fullName>Porte__c</fullName>
    <formula>CASE(1,
IF((NumeroVidas__c&gt;=1)&amp;&amp;(NumeroVidas__c&lt;=29),1,0),&apos;PME1 e Individual&apos;,

IF((NumeroVidas__c &gt; 29)&amp;&amp; (NumeroVidas__c&lt;=99),1,0), &apos;PME2&apos;,

IF((NumeroVidas__c &gt; 99)&amp;&amp; (NumeroVidas__c&lt;=300),1,0), &apos;ME&apos;,

IF((NumeroVidas__c &gt; 300)&amp;&amp; (NumeroVidas__c&lt;=600),1,0), &apos;GC&apos;,

IF((NumeroVidas__c &gt; 600),1,0), &apos;CE&apos;,

&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porte</label>
    <type>Text</type>
</CustomField>