force-app/main/default/objects/Opportunity/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <description>Campo para inserção das fotografias dos Corretores Unimed</description>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unifacil Flex 30</fullName>
            </value>
            <value>
                <fullName>Unifacil Flex 50</fullName>
            </value>
            <value>
                <fullName>Unimax  Apartamento</fullName>
            </value>
            <value>
                <fullName>Unimax Enfermaria</fullName>
            </value>
            <value>
                <fullName>Unimed Pleno  Apartamento</fullName>
            </value>
            <value>
                <fullName>Unimed Pleno  Enfermaria</fullName>
            </value>
            <value>
                <fullName>Unipart Flex 30 Apartamento</fullName>
            </value>
            <value>
                <fullName>Unipart Flex 30 Enfermaria</fullName>
            </value>
            <value>
                <fullName>Unipart Flex 50 Apartamento</fullName>
            </value>
            <value>
                <fullName>Unipart Flex 50 Enfermaria</fullName>
            </value>
            <value>
                <fullName>UNIMAX APARTAMENTO</fullName>
            </value>
            <value>
                <fullName>UNIMED PLENO APARTAMENTO</fullName>
            </value>
            <value>
                <fullName>UNIMED PLENO ENFERMARIA</fullName>
            </value>
            <value>
                <fullName>UNIMED PLENO PLENO</fullName>
            </value>
            <value>
                <fullName>UNIPART FLEX</fullName>
            </value>
            <value>
                <fullName>UNIFACIL FLEX APARTAMENTO</fullName>
            </value>
            <value>
                <fullName>UNIFACIL FLEX ENFERMARIA</fullName>
            </value>
            <value>
                <fullName>UNIPART</fullName>
            </value>
            <value>
                <fullName>UNIPART REGIONAL INDIVIDUAL APARTAMENTO FLEX 50</fullName>
            </value>
            <value>
                <fullName>UNIPART REGIONAL INDIVIDUAL ENFERMARIA FLEX 30</fullName>
            </value>
            <value>
                <fullName>UNIFACIL FLEX</fullName>
            </value>
            <value>
                <fullName>UNIMED PLENO COPART REGIONAL INDIVIDUAL APARTAMENTO</fullName>
            </value>
            <value>
                <fullName>UNIFACIL FLEX COPART REGIONAL EMPRESARIAL ENF</fullName>
            </value>
            <value>
                <fullName>BEM DIGITAL</fullName>
            </value>
            <value>
                <fullName>ADAPTADO COLETIVO EMPRESARIAL ENFERMARIA</fullName>
            </value>
            <value>
                <fullName>BEM DIGITAL REG APARTAMENTO</fullName>
            </value>
            <value>
                <fullName>BEM DIGITAL REG ENFERMARIA</fullName>
            </value>
            <value>
                <fullName>ODONTO DOC</fullName>
            </value>
            <value>
                <fullName>ODONTO ESSENCIAL</fullName>
            </value>
            <value>
                <fullName>ODONTOLOGICO ODONTOPREV EMPRESARIAL AMPLIADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>