force-app/main/default/objects/Opportunity/fields/QtdeAeromedico__c.field-meta.xml
<CustomField>
    <fullName>QtdeAeromedico__c</fullName>
    <description>Informação advinda da integração com SGC. Somatório de módulos aeromédico.</description>
    <label>Quantidade Aeromédico</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>