force-app/main/default/objects/Opportunity/fields/QtdeAeromedicoTransferencia__c.field-meta.xml
<CustomField>
    <fullName>QtdeAeromedicoTransferencia__c</fullName>
    <description>Informação advinda do SGC: Somatório de módulos aeromédico considerado como transferência.</description>
    <label>Quantidade Aeromédico Transferência</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>