force-app/main/default/objects/Opportunity/fields/QtdeOdonto__c.field-meta.xml
<CustomField>
    <fullName>QtdeOdonto__c</fullName>
    <description>Utilizado na integração com SGC, recebe o somatório de odontológico.</description>
    <label>Quantidade Odontológico</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>