force-app/main/default/objects/Opportunity/fields/QtdeOdontoTransferencia__c.field-meta.xml
<CustomField>
    <fullName>QtdeOdontoTransferencia__c</fullName>
    <description>Informação advinda do SGC: Somatório de módulos odontológicos considerado como transferência.</description>
    <label>Quantidade Odontológico Transferência</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>