force-app/main/default/objects/Opportunity/fields/QtdeProtecao__c.field-meta.xml
<CustomField>
    <fullName>QtdeProtecao__c</fullName>
    <description>Utilizado na integração com SGC, recebe o somatório de Proteção Familiar.</description>
    <label>Quantidade Proteção Familiar</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>