force-app/main/default/objects/Opportunity/fields/QtdeTransferencia__c.field-meta.xml
<CustomField>
    <fullName>QtdeTransferencia__c</fullName>
    <description>Informação advinda do SGC: Quantidade de vidas que são transferência</description>
    <label>Quantidade de Transferência</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>