force-app/main/default/objects/Opportunity/fields/QtdeVidasNovas__c.field-meta.xml
<CustomField>
    <fullName>QtdeVidasNovas__c</fullName>
    <description>Informação advinda do SGC: Quantidade de vidas novas</description>
    <label>Quantidade Vidas Novas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>