force-app/main/default/objects/Opportunity/fields/QuantidadeAssistencial__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAssistencial__c</fullName>
    <description>Utilizado na integração com SGC, recebe o somatório de assistencial.</description>
    <label>Quantidade Assistencial</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>