force-app/main/default/objects/Opportunity/fields/Sistema__c.field-meta.xml
<CustomField>
    <fullName>Sistema__c</fullName>
    <description>Campo para inserção das fotografias dos Corretores Unimed</description>
    <label>Sistema</label>
    <length>100</length>
    <type>Text</type>
</CustomField>