force-app/main/default/objects/Opportunity/fields/SituacaoPJ__c.field-meta.xml
<CustomField>
    <fullName>SituacaoPJ__c</fullName>
    <description>Campo utilizado para INTEGRAÇÃO - NÃO DELETAR</description>
    <label>Situação PJ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D - Disponível para reserva</fullName>
            </value>
            <value>
                <fullName>D - Disponivel para reserva</fullName>
            </value>
            <value>
                <fullName>DC - Disponível para cadastro</fullName>
            </value>
            <value>
                <fullName>AT - Reserva ativa</fullName>
            </value>
            <value>
                <fullName>I - Indisponível</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>